--- a/Tofu_Diffusion_SD.ipynb
+++ b/Tofu_Diffusion_SD.ipynb
@@ -15,14 +15,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "cellView": "form",
         "id": "IJjzzkKlWM_s",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f645ce74-a74c-4096-f69c-e27f921f07b6"
+        "outputId": "56cd4d85-dc86-4a02-bd70-e856044bc523"
       },
       "outputs": [
         {
@@ -51,12 +51,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "cellView": "form",
-        "id": "vohUiWo-I2HQ"
+        "id": "vohUiWo-I2HQ",
+        "outputId": "a84f5454-2a8c-4146-e322-aebf462ab608",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "..setting up environment\n",
+            "..installing triton and xformers\n",
+            "..environment set up in 50 seconds\n"
+          ]
+        }
+      ],
       "source": [
         "#@markdown **2. Environment Setup**\n",
         "import subprocess, time, gc, os, sys\n",
@@ -158,8 +172,7 @@
         "#    print(f\"{civitai_model_name}{civitai_model_type}\")\n",
         "#    print(\"path = /content/civitai_models/\"f\"{civitai_model_name}{civitai_model_type}\")\n",
         "#else:\n",
-        "#    print(\"Download failed\")\n",
-        "\n"
+        "#    print(\"Download failed\")\n"
       ],
       "metadata": {
         "cellView": "form",
@@ -172,7 +185,6 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "cellView": "form",
         "id": "0D2HQO-PWM_t"
       },
       "outputs": [],
@@ -192,7 +204,7 @@
         "    model_config = \"v1-inference.yaml\" \n",
         "    model_checkpoint =  \"custom\" #@param [\"custom\",\"v2-1_768-ema-pruned.ckpt\",\"v2-1_512-ema-pruned.ckpt\",\"768-v-ema.ckpt\",\"512-base-ema.ckpt\",\"Protogen_V2.2.ckpt\",\"v1-5-pruned.ckpt\",\"v1-5-pruned-emaonly.ckpt\",\"sd-v1-4-full-ema.ckpt\",\"sd-v1-4.ckpt\",\"sd-v1-3-full-ema.ckpt\",\"sd-v1-3.ckpt\",\"sd-v1-2-full-ema.ckpt\",\"sd-v1-2.ckpt\",\"sd-v1-1-full-ema.ckpt\",\"sd-v1-1.ckpt\", \"robo-diffusion-v1.ckpt\",\"wd-v1-3-float16.ckpt\"]\n",
         "    custom_config_path = \"\" \n",
-        "    custom_checkpoint_path = \"\" #@param {type:\"string\"}\n",
+        "    custom_checkpoint_path = \"/content/civitai_models/majicMIX.safetensors\" #@param {type:\"string\"}\n",
         "    return locals()\n",
         "\n",
         "root = Root()\n",
@@ -501,6 +513,65 @@
         "else:\n",
         "    render_image_batch(root, args, cond_prompts, uncond_prompts)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "from IPython.display import display, HTML, clear_output\n",
+        "\n",
+        "#@markdown **3. CivitAI Model Setup**\n",
+        "\n",
+        "civitai_models_list = []\n",
+        "civitai_model_path = \"https://civitai.com/api/download/models/69687\" #@param {type:\"string\"}\n",
+        "civitai_model_name = \"majicMIX\" #@param {type:\"string\"}\n",
+        "civitai_model_type = \".safetensors\" #@param [\".safetensors\",\".ckpt\"]\n",
+        "\n",
+        "#@markdown\n",
+        "#@markdown *Check your model type on CivitAI*\\\n",
+        "#@markdown --- Pickletensor -> .ckpt \\\n",
+        "#@markdown --- Safetensor -> .safetensors\n",
+        "\n",
+        "output = \"\" \n",
+        "\n",
+        "if not civitai_model_path:\n",
+        " #   display(HTML('<font color=\"red\">Link missing</font>'))\n",
+        "elif not civitai_model_name:\n",
+        "   # display(HTML('<font color=\"red\">Name missing</font>'))\n",
+        "else:\n",
+        "    output = !cd /content/civitai_models/ && curl -LOJ {civitai_model_path} && echo \"Download successful\" || echo \"Download failed, maybe the link is wrong?\"\n",
+        "    #output = !wget -P /content/civitai_models/ --trust-server-names {civitai_model_path} && echo \"Download successful\" || echo \"Download failed, maybe the link is wrong?\"\n",
+        "    #output = !wget -O /content/civitai_models/{civitai_model_name}{civitai_model_type} {civitai_model_path} && echo \"Download successful\" || echo \"Download failed, maybe the link is wrong?\"\n",
+        "\n",
+        "#print(output) \n",
+        "#output_list = list(output)\n",
+        "#w '%{filename_effective}\\n'\n",
+        "\n",
+        "\n",
+        "\n",
+        "directory = \"/content/civitai_models\"\n",
+        "files_in_directory = os.listdir(directory)\n",
+        "civitai_models_list = [file for file in files_in_directory if file.endswith(\".ckpt\") or file.endswith(\".safetensors\")]\n",
+        "\n",
+        "#list2 = [directory + \"/\" + element for element in files_in_directory if not element.endswith('_checkpoints')]\n",
+        "#for elements in list2:\n",
+        "#    print(files_in_directory)\n",
+        "#    display(HTML(''))\n",
+        "\n",
+        "#clear_output()\n",
+        "\n",
+        "#if output_list[-1] == \"Download successful\":\n",
+        "#    display(HTML('<b><font color=\"green\">CivitAI model downloaded successfully!</font></b>'))\n",
+        "#    print(f\"{civitai_model_name}{civitai_model_type}\")\n",
+        "#    print(\"path = /content/civitai_models/\"f\"{civitai_model_name}{civitai_model_type}\")\n",
+        "#else:\n",
+        "#    print(\"Download failed\")"
+      ],
+      "metadata": {
+        "id": "3iI5GG7P8rQE"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
