--- a/Tofu_Diffusion_SD.ipynb
+++ b/Tofu_Diffusion_SD.ipynb
@@ -53,7 +53,6 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "cellView": "form",
         "id": "vohUiWo-I2HQ"
       },
       "outputs": [],
@@ -76,7 +75,7 @@
         "        \n",
         "        all_process = [\n",
         "            ['pip', 'install', 'omegaconf', 'einops==0.4.1', 'pytorch-lightning==1.7.8', 'torchmetrics', 'transformers', 'safetensors', 'kornia'],\n",
-        "            ['git', 'clone', '-b', 'dev', 'https://github.com/deforum-art/deforum-stable-diffusion'],\n",
+        "            ['git', 'clone', '-b', 'dev', 'https://github.com/tofudiffusion/tofu_diffusion_SD', 'deforum-stable-diffusion'],\n",
         "            ['pip', 'install', 'accelerate', 'ftfy', 'jsonmerge', 'matplotlib', 'resize-right', 'timm', 'torchdiffeq','scikit-learn','torchsde','open-clip-torch','numpngw'],\n",
         "        ]\n",
         "        for process in all_process:\n",
