--- a/Tofu_Diffusion_SD.ipynb
+++ b/Tofu_Diffusion_SD.ipynb
@@ -18,21 +18,9 @@
       "execution_count": null,
       "metadata": {
         "cellView": "form",
-        "id": "IJjzzkKlWM_s",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "56cd4d85-dc86-4a02-bd70-e856044bc523"
+        "id": "IJjzzkKlWM_s"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Tesla T4, 15360 MiB, 15101 MiB\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "#@markdown **1. NVIDIA GPU**\n",
         "import subprocess, os, sys\n",
@@ -53,57 +41,64 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
+        "cellView": "form",
         "id": "vohUiWo-I2HQ"
       },
       "outputs": [],
       "source": [
-        "#@markdown **2. Environment Setup**\n",
+        "#@markdown **Environment Setup**\n",
         "import subprocess, time, gc, os, sys\n",
         "\n",
-        "!mkdir -p /content/civitai_models\n",
-        "\n",
         "def setup_environment():\n",
-        "    start_time = time.time()\n",
-        "    print_subprocess = False\n",
-        "    use_xformers_for_colab = True\n",
+        "    \n",
+        "    # Check if it's a Google Colab environment\n",
         "    try:\n",
         "        ipy = get_ipython()\n",
         "    except:\n",
         "        ipy = 'could not get_ipython'\n",
+        "    \n",
         "    if 'google.colab' in str(ipy):\n",
-        "        print(\"..setting up environment\")\n",
-        "        \n",
-        "        all_process = [\n",
-        "            ['pip', 'install', 'omegaconf', 'einops==0.4.1', 'pytorch-lightning==1.7.8', 'torchmetrics', 'transformers', 'safetensors', 'kornia'],\n",
-        "            ['git', 'clone', '-b', 'dev', 'https://github.com/tofudiffusion/tofu_diffusion_SD', 'deforum-stable-diffusion'],\n",
-        "            ['pip', 'install', 'accelerate', 'ftfy', 'jsonmerge', 'matplotlib', 'resize-right', 'timm', 'torchdiffeq','scikit-learn','torchsde','open-clip-torch','numpngw'],\n",
+        "\n",
+        "        # Start the timer\n",
+        "        start_time = time.time()\n",
+        "\n",
+        "        # Installing the necessary packages\n",
+        "        packages = [\n",
+        "            'torch==2.0.0 torchvision torchaudio triton xformers',\n",
+        "            'einops==0.4.1 pytorch-lightning==1.7.7 torchdiffeq torchsde omegaconf',\n",
+        "            'ftfy timm transformers open-clip-torch omegaconf torchmetrics',\n",
+        "            'safetensors kornia accelerate jsonmerge matplotlib resize-right',\n",
+        "            'scikit-learn numpngw'\n",
         "        ]\n",
-        "        for process in all_process:\n",
-        "            running = subprocess.run(process,stdout=subprocess.PIPE).stdout.decode('utf-8')\n",
-        "            if print_subprocess:\n",
-        "                print(running)\n",
+        "\n",
+        "        for package in packages:\n",
+        "            print(f\"..installing {package}\")\n",
+        "            subprocess.check_call([sys.executable, '-m', 'pip', 'install'] + package.split())\n",
+        "\n",
+        "        # Cloning the github repository\n",
+        "        subprocess.check_call(['git', 'clone', 'https://github.com/deforum-art/deforum-stable-diffusion'])\n",
+        "\n",
+        "        # Modifying the python file\n",
         "        with open('deforum-stable-diffusion/src/k_diffusion/__init__.py', 'w') as f:\n",
         "            f.write('')\n",
+        "\n",
+        "        # Extending the system path\n",
         "        sys.path.extend([\n",
         "            'deforum-stable-diffusion/',\n",
         "            'deforum-stable-diffusion/src',\n",
         "        ])\n",
-        "        if use_xformers_for_colab:\n",
         "\n",
-        "            print(\"..installing triton and xformers\")\n",
+        "        # End the timer\n",
+        "        end_time = time.time()\n",
         "\n",
-        "            all_process = [['pip', 'install', 'triton', 'xformers']]\n",
-        "            for process in all_process:\n",
-        "                running = subprocess.run(process,stdout=subprocess.PIPE).stdout.decode('utf-8')\n",
-        "                if print_subprocess:\n",
-        "                    print(running)\n",
+        "        # Print the time it took\n",
+        "        print(f\"..environment set up in {end_time-start_time:.0f} seconds\")\n",
+        "    \n",
         "    else:\n",
         "        sys.path.extend([\n",
         "            'src'\n",
         "        ])\n",
-        "    end_time = time.time()\n",
-        "    print(f\"..environment set up in {end_time-start_time:.0f} seconds\")\n",
-        "    return\n",
+        "        print(\"..skipping setup\")\n",
         "\n",
         "setup_environment()\n",
         "\n",
