--- a/Tofu_Diffusion_SD.ipynb
+++ b/Tofu_Diffusion_SD.ipynb
@@ -8,7 +8,7 @@
       "source": [
         "# **Tofu Diffusion SD**\n",
         "\n",
-        "**Tofu Diffusion is a fork of the Deforum notebook, made for single image generation**\\\n",
+        "**Tofu Diffusion v1.0.0 is a fork of the Deforum notebook, made for single image generation**\\\n",
         "\\\n",
         "[Stable Diffusion](https://github.com/CompVis/stable-diffusion) by Robin Rombach, Andreas Blattmann, Dominik Lorenz, Patrick Esser, Björn Ommer and the [Stability.ai](https://stability.ai/) Team. [K Diffusion](https://github.com/crowsonkb/k-diffusion) by [Katherine Crowson](https://twitter.com/RiversHaveWings). Notebook by [deforum](https://discord.gg/upmXXsrwZc)"
       ]
@@ -41,13 +41,14 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "cellView": "form",
         "id": "vohUiWo-I2HQ"
       },
       "outputs": [],
       "source": [
         "#@markdown **Environment Setup**\n",
         "import subprocess, time, gc, os, sys\n",
+        "\n",
+        "!mkdir -p /content/civitai_models/\n",
         "\n",
         "def setup_environment():\n",
         "    \n",
@@ -141,8 +142,7 @@
         "    print(f'{file}: {directory}/{file}')"
       ],
       "metadata": {
-        "id": "3iI5GG7P8rQE",
-        "cellView": "form"
+        "id": "3iI5GG7P8rQE"
       },
       "execution_count": null,
       "outputs": []
