--- a/Tofu_Diffusion_SD.ipynb
+++ b/Tofu_Diffusion_SD.ipynb
@@ -41,7 +41,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "vohUiWo-I2HQ"
+        "id": "vohUiWo-I2HQ",
+        "cellView": "form"
       },
       "outputs": [],
       "source": [
@@ -77,7 +78,7 @@
         "            subprocess.check_call([sys.executable, '-m', 'pip', 'install'] + package.split())\n",
         "\n",
         "        # Cloning the github repository\n",
-        "        subprocess.check_call(['git', 'clone', 'https://github.com/deforum-art/deforum-stable-diffusion'])\n",
+        "        subprocess.check_call(['git', 'clone', '-b', 'dev', 'https://github.com/deforum-art/deforum-stable-diffusion'])\n",
         "\n",
         "        # Modifying the python file\n",
         "        with open('deforum-stable-diffusion/src/k_diffusion/__init__.py', 'w') as f:\n",
@@ -142,7 +143,8 @@
         "    print(f'{file}: {directory}/{file}')"
       ],
       "metadata": {
-        "id": "3iI5GG7P8rQE"
+        "id": "3iI5GG7P8rQE",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
