--- a/Tofu_Diffusion_SD.ipynb
+++ b/Tofu_Diffusion_SD.ipynb
@@ -46,7 +46,7 @@
       },
       "outputs": [],
       "source": [
-        "#@markdown **Environment Setup**\n",
+        "#@markdown **2. Environment Setup**\n",
         "import subprocess, time, gc, os, sys\n",
         "\n",
         "!mkdir -p /content/civitai_models/\n",
