--- a/Tofu_Diffusion_SD.ipynb
+++ b/Tofu_Diffusion_SD.ipynb
@@ -41,7 +41,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "vohUiWo-I2HQ"
+        "id": "vohUiWo-I2HQ",
+        "cellView": "form"
       },
       "outputs": [],
       "source": [
@@ -164,8 +165,8 @@
         "    configs_path = \"configs\" \n",
         "    output_path = \"outputs\" \n",
         "    mount_google_drive = True #@param {type:\"boolean\"}\n",
-        "    models_path_gdrive = \"/content/drive/MyDrive/AI/models\" #@param {type:\"string\"}\n",
-        "    output_path_gdrive = \"/content/drive/MyDrive/AI/StableDiffusion\" #@param {type:\"string\"}\n",
+        "    models_path_gdrive = \"/content/drive/MyDrive/AI/models\"\n",
+        "    output_path_gdrive = \"/content/drive/MyDrive/AI/StableDiffusion\"\n",
         "\n",
         "    #@markdown **5. Model Setup**\n",
         "    map_location = \"cuda\" \n",
@@ -301,14 +302,12 @@
         "\n",
         "# positive prompts\n",
         "cond_prompts = {\n",
-        "    1: \"(best resolution, 4k, best detail), perfect face, latina, cute round face, thick lips, 30 years, punk makeupgreen eyes, black bikini, perfect body, Cinematic lighting\",\n",
-        "    2: \"photograph of a model, delicate features, beautiful face, dreadlocked hair, long bangs, long ponytail, brown eyes\",\n",
+        "    1: \"(best resolution, 4k, best detail), perfect face, latina, punk makeupgreen eyes, black bikini\",\n",
         "}\n",
         "\n",
         "# negative prompts\n",
         "uncond_prompts = {\n",
         "    1: \"(lowres, bad quality), deformed body, deformed face, ugly, extra fingers, extra limbs, bad hands\",\n",
-        "    2: \"(lowres, bad quality), deformed body, deformed face, ugly, extra fingers, extra limbs, bad hands\",\n",
         "}"
       ]
     },
@@ -333,7 +332,7 @@
         "    W = int(W)\n",
         "    H = int(H)\n",
         "    W, H = map(lambda x: x - x % 64, (W, H))  # resize to integer multiple of 64\n",
-        "    bit_depth_output = 8 #@param [8, 16, 32] {type:\"raw\"}\n",
+        "    bit_depth_output = 8 \n",
         "\n",
         "    #@markdown **Sampling Settings**\n",
         "    seed = -1 #@param\n",
@@ -353,13 +352,13 @@
         "\n",
         "    #@markdown **Batch Settings**\n",
         "    n_batch = 1 #@param\n",
-        "    n_samples = 1 #@param\n",
+        "    n_samples = 1 \n",
         "    batch_name = \"StableArt\" #@param {type:\"string\"}\n",
         "    filename_format = \"{timestring}_{index}_{prompt}.png\" \n",
-        "    seed_behavior = \"iter\" #@param [\"iter\",\"fixed\",\"random\",\"ladder\",\"alternate\"]\n",
+        "    seed_behavior = \"iter\" \n",
         "    seed_iter_N = 1 \n",
-        "    make_grid = False #@param {type:\"boolean\"}\n",
-        "    grid_rows = 2 #@param \n",
+        "    make_grid = False \n",
+        "    grid_rows = 2  \n",
         "    outdir = get_output_folder(root.output_path, batch_name)\n",
         "\n",
         "    #@markdown **Initial Image Settings**\n",
@@ -367,8 +366,8 @@
         "    strength = 0.65 #@param {type:\"number\"}\n",
         "    strength_0_no_init = True # Set the strength to 0 automatically when no init image is used\n",
         "    init_image = \"https://cdn.pixabay.com/photo/2022/07/30/13/10/green-longhorn-beetle-7353749_1280.jpg\" #@param {type:\"string\"}\n",
-        "    add_init_noise = False #@param {type:\"boolean\"}\n",
-        "    init_noise = 0.01 #@param\n",
+        "    add_init_noise = False \n",
+        "    init_noise = 0.01 \n",
         "    # Whiter areas of the mask are areas that change more\n",
         "    use_mask = False\n",
         "    use_alpha_as_mask = False # use the alpha channel of the init image as the mask\n",
