--- a/Tofu_Diffusion_SD.ipynb
+++ b/Tofu_Diffusion_SD.ipynb
@@ -8,9 +8,10 @@
       "source": [
         "# **Tofu Diffusion SD**\n",
         "\n",
-        "**Tofu Diffusion v1.0.0 is a fork of the Deforum notebook, made for single image generation**\\\n",
-        "\\\n",
-        "[Stable Diffusion](https://github.com/CompVis/stable-diffusion) by Robin Rombach, Andreas Blattmann, Dominik Lorenz, Patrick Esser, Björn Ommer and the [Stability.ai](https://stability.ai/) Team. [K Diffusion](https://github.com/crowsonkb/k-diffusion) by [Katherine Crowson](https://twitter.com/RiversHaveWings). Notebook by [deforum](https://discord.gg/upmXXsrwZc)"
+        "**Tofu Diffusion v1.0.0** is a fork of the [Deforum](https://github.com/deforum-art/deforum-stable-diffusion) notebook, made for single image generation. This notebook was customized by [Spingels](https://twitter.com/spingels_art)\n",
+        "\n",
+        "\n",
+        "[Stable Diffusion](https://github.com/CompVis/stable-diffusion) by Robin Rombach, Andreas Blattmann, Dominik Lorenz, Patrick Esser, Björn Ommer and the [Stability.ai](https://stability.ai/) Team. [K Diffusion](https://github.com/crowsonkb/k-diffusion) by [Katherine Crowson](https://twitter.com/RiversHaveWings)."
       ]
     },
     {
@@ -123,7 +124,7 @@
         "from IPython.display import display, HTML, clear_output\n",
         "\n",
         "#@markdown **3. Civitai Model Setup**\\\n",
-        "#@markdown *copy the download link from civitai.com*\n",
+        "#@markdown *copy the download link from civitai.com - only SD1.5 Models*\n",
         "\n",
         "civitai_models_list = []\n",
         "civitai_model_url = \"\" #@param {type:\"string\"}\n",
@@ -302,7 +303,7 @@
         "\n",
         "# positive prompts\n",
         "cond_prompts = {\n",
-        "    1: \"(best resolution, 4k, best detail), perfect face, latina, punk makeupgreen eyes, black bikini\",\n",
+        "    1: \"(best resolution, 4k, best detail), perfect face, latina, punk makeup, green eyes, black bikini\",\n",
         "}\n",
         "\n",
         "# negative prompts\n",
