--- a/Tofu_Diffusion_SD.ipynb
+++ b/Tofu_Diffusion_SD.ipynb
@@ -16,12 +16,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "cellView": "form",
-        "id": "IJjzzkKlWM_s"
+        "id": "IJjzzkKlWM_s",
+        "outputId": "75567f5a-67cf-466d-c916-864b3340cd7b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Tesla T4, 15360 MiB, 15101 MiB\n"
+          ]
+        }
+      ],
       "source": [
         "#@markdown **1. NVIDIA GPU**\n",
         "import subprocess, os, sys\n",
@@ -50,57 +62,37 @@
         "#@markdown **2. Environment Setup**\n",
         "import subprocess, time, gc, os, sys\n",
         "\n",
-        "!mkdir -p /content/civitai_models/\n",
+        "\n",
         "\n",
         "def setup_environment():\n",
-        "    \n",
-        "    # Check if it's a Google Colab environment\n",
         "    try:\n",
         "        ipy = get_ipython()\n",
         "    except:\n",
         "        ipy = 'could not get_ipython'\n",
-        "    \n",
+        "\n",
         "    if 'google.colab' in str(ipy):\n",
-        "\n",
-        "        # Start the timer\n",
         "        start_time = time.time()\n",
-        "\n",
-        "        # Installing the necessary packages\n",
         "        packages = [\n",
-        "            'torch==2.0.0 torchvision torchaudio triton xformers',\n",
-        "            'einops==0.4.1 pytorch-lightning==1.7.7 torchdiffeq torchsde omegaconf',\n",
+        "            'triton xformers==0.0.21.dev547',\n",
+        "            'einops==0.4.1 pytorch-lightning==1.7.7 torchdiffeq==0.2.3 torchsde==0.2.5',\n",
         "            'ftfy timm transformers open-clip-torch omegaconf torchmetrics',\n",
         "            'safetensors kornia accelerate jsonmerge matplotlib resize-right',\n",
-        "            'scikit-learn numpngw'\n",
+        "            'scikit-learn numpngw pydantic'\n",
         "        ]\n",
-        "\n",
         "        for package in packages:\n",
         "            print(f\"..installing {package}\")\n",
         "            subprocess.check_call([sys.executable, '-m', 'pip', 'install'] + package.split())\n",
-        "\n",
-        "        # Cloning the github repository\n",
-        "        subprocess.check_call(['git', 'clone', 'https://github.com/deforum-art/deforum-stable-diffusion'])\n",
-        "\n",
-        "        # Modifying the python file\n",
+        "        if not os.path.exists(\"deforum-stable-diffusion\"):\n",
+        "            subprocess.check_call(['git', 'clone', '-b', '0.7.1', 'https://github.com/deforum-art/deforum-stable-diffusion.git'])\n",
+        "        else:\n",
+        "            print(f\"..deforum-stable-diffusion already exists\")\n",
         "        with open('deforum-stable-diffusion/src/k_diffusion/__init__.py', 'w') as f:\n",
         "            f.write('')\n",
-        "\n",
-        "        # Extending the system path\n",
-        "        sys.path.extend([\n",
-        "            'deforum-stable-diffusion/',\n",
-        "            'deforum-stable-diffusion/src',\n",
-        "        ])\n",
-        "\n",
-        "        # End the timer\n",
+        "        sys.path.extend(['deforum-stable-diffusion/','deforum-stable-diffusion/src',])\n",
         "        end_time = time.time()\n",
-        "\n",
-        "        # Print the time it took\n",
         "        print(f\"..environment set up in {end_time-start_time:.0f} seconds\")\n",
-        "    \n",
         "    else:\n",
-        "        sys.path.extend([\n",
-        "            'src'\n",
-        "        ])\n",
+        "        sys.path.extend(['src'])\n",
         "        print(\"..skipping setup\")\n",
         "\n",
         "setup_environment()\n",
@@ -114,7 +106,10 @@
         "from helpers.settings import load_args\n",
         "from helpers.render import render_animation, render_input_video, render_image_batch, render_interpolation\n",
         "from helpers.model_load import make_linear_decode, load_model, get_model_output_paths\n",
-        "from helpers.aesthetics import load_aesthetics_model"
+        "from helpers.aesthetics import load_aesthetics_model\n",
+        "from helpers.prompts import Prompts\n",
+        "\n",
+        "!mkdir -p /content/civitai_models/"
       ]
     },
     {
@@ -129,7 +124,7 @@
         "civitai_models_list = []\n",
         "civitai_model_url = \"\" #@param {type:\"string\"}\n",
         "\n",
-        "output = \"\" \n",
+        "output = \"\"\n",
         "\n",
         "if not civitai_model_url:\n",
         "    display(HTML('<font color=\"red\">Link missing</font>'))\n",
@@ -140,7 +135,7 @@
         "directory = \"/content/civitai_models\"\n",
         "files_in_directory = os.listdir(directory)\n",
         "civitai_models_list = [file for file in files_in_directory if file.endswith(\".ckpt\") or file.endswith(\".safetensors\")]\n",
-        "for file in civitai_models_list: \n",
+        "for file in civitai_models_list:\n",
         "    print(f'{file}: {directory}/{file}')"
       ],
       "metadata": {
@@ -162,16 +157,16 @@
         "#@markdown **4. Path Setup**\n",
         "\n",
         "def Root():\n",
-        "    models_path = \"models\" \n",
-        "    configs_path = \"configs\" \n",
-        "    output_path = \"outputs\" \n",
+        "    models_path = \"models\"\n",
+        "    configs_path = \"configs\"\n",
+        "    output_path = \"outputs\"\n",
         "    mount_google_drive = True #@param {type:\"boolean\"}\n",
         "    models_path_gdrive = \"/content/drive/MyDrive/AI/models\"\n",
         "    output_path_gdrive = \"/content/drive/MyDrive/AI/StableDiffusion\"\n",
         "\n",
         "    #@markdown **5. Model Setup**\n",
-        "    map_location = \"cuda\" \n",
-        "    model_config = \"v1-inference.yaml\" \n",
+        "    map_location = \"cuda\"\n",
+        "    model_config = \"v1-inference.yaml\"\n",
         "    model_checkpoint =  \"custom\" #@param [\"custom\",\"v2-1_768-ema-pruned.ckpt\",\"v2-1_512-ema-pruned.ckpt\",\"768-v-ema.ckpt\",\"512-base-ema.ckpt\",\"Protogen_V2.2.ckpt\",\"v1-5-pruned.ckpt\",\"v1-5-pruned-emaonly.ckpt\",\"sd-v1-4-full-ema.ckpt\",\"sd-v1-4.ckpt\",\"sd-v1-3-full-ema.ckpt\",\"sd-v1-3.ckpt\",\"sd-v1-2-full-ema.ckpt\",\"sd-v1-2.ckpt\",\"sd-v1-1-full-ema.ckpt\",\"sd-v1-1.ckpt\", \"robo-diffusion-v1.ckpt\",\"wd-v1-3-float16.ckpt\"]\n",
         "    custom_config_path = \"\"\n",
         "    custom_checkpoint_path = \"\" #@param {type:\"string\"}\n",
@@ -195,7 +190,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "cellView": "form",
         "id": "E0tJVYA4WM_u"
@@ -206,9 +201,9 @@
         "\n",
         "    #@markdown ####**5. Load additional settings**\n",
         "    #@markdown *Don't forget to run this cell!*\n",
-        "    animation_mode = 'None' \n",
-        "    max_frames = 1000 \n",
-        "    border = 'replicate' \n",
+        "    animation_mode = 'None'\n",
+        "    max_frames = 1000\n",
+        "    border = 'replicate'\n",
         "\n",
         "    ##@markdown ####**Motion Parameters:**\n",
         "    angle = \"0:(0)\"\n",
@@ -219,7 +214,7 @@
         "    rotation_3d_x = \"0:(0)\"\n",
         "    rotation_3d_y = \"0:(0)\"\n",
         "    rotation_3d_z = \"0:(0)\"\n",
-        "    flip_2d_perspective = False \n",
+        "    flip_2d_perspective = False\n",
         "    perspective_flip_theta = \"0:(0)\"\n",
         "    perspective_flip_phi = \"0:(t%15)\"\n",
         "    perspective_flip_gamma = \"0:(0)\"\n",
@@ -227,14 +222,14 @@
         "    noise_schedule = \"0: (0.02)\"\n",
         "    strength_schedule = \"0: (0.65)\"\n",
         "    contrast_schedule = \"0: (1.0)\"\n",
-        "    hybrid_comp_alpha_schedule = \"0:(1)\" \n",
+        "    hybrid_comp_alpha_schedule = \"0:(1)\"\n",
         "    hybrid_comp_mask_blend_alpha_schedule = \"0:(0.5)\"\n",
         "    hybrid_comp_mask_contrast_schedule = \"0:(1)\"\n",
         "    hybrid_comp_mask_auto_contrast_cutoff_high_schedule =  \"0:(100)\"\n",
         "    hybrid_comp_mask_auto_contrast_cutoff_low_schedule =  \"0:(0)\"\n",
         "\n",
         "    ##@markdown ####**Sampler Scheduling:**\n",
-        "    enable_schedule_samplers = False \n",
+        "    enable_schedule_samplers = False\n",
         "    sampler_schedule = \"0:('euler'),10:('dpm2'),20:('dpm2_ancestral'),30:('heun'),40:('euler'),50:('euler_ancestral'),60:('dpm_fast'),70:('dpm_adaptive'),80:('dpmpp_2s_a'),90:('dpmpp_2m')\"\n",
         "\n",
         "    ##@markdown ####**Unsharp mask (anti-blur) Parameters:**\n",
@@ -245,55 +240,55 @@
         "\n",
         "    ##@markdown ####**Coherence:**\n",
         "    color_coherence = 'Match Frame 0 LAB'\n",
-        "    color_coherence_video_every_N_frames = 1 \n",
-        "    color_force_grayscale = False \n",
-        "    diffusion_cadence = '1' \n",
+        "    color_coherence_video_every_N_frames = 1\n",
+        "    color_force_grayscale = False\n",
+        "    diffusion_cadence = '1'\n",
         "\n",
         "    ##@markdown ####**3D Depth Warping:**\n",
-        "    use_depth_warping = True \n",
+        "    use_depth_warping = True\n",
         "    midas_weight = 0.3\n",
         "    near_plane = 200\n",
         "    far_plane = 10000\n",
         "    fov = 40\n",
         "    padding_mode = 'border'\n",
         "    sampling_mode = 'bicubic'\n",
-        "    save_depth_maps = False \n",
+        "    save_depth_maps = False\n",
         "\n",
         "    ##@markdown ####**Video Input:**\n",
         "    video_init_path ='/content/video_in.mp4'\n",
         "    extract_nth_frame = 1\n",
-        "    overwrite_extracted_frames = True \n",
-        "    use_mask_video = False \n",
+        "    overwrite_extracted_frames = True\n",
+        "    use_mask_video = False\n",
         "    video_mask_path ='/content/video_in.mp4'\n",
         "\n",
         "    ##@markdown ####**Hybrid Video for 2D/3D Animation Mode:**\n",
-        "    hybrid_generate_inputframes = False \n",
-        "    hybrid_use_first_frame_as_init_image = True \n",
-        "    hybrid_motion = \"None\" \n",
-        "    hybrid_motion_use_prev_img = False \n",
-        "    hybrid_flow_method = \"DIS Medium\" \n",
-        "    hybrid_composite = False \n",
-        "    hybrid_comp_mask_type = \"None\" \n",
-        "    hybrid_comp_mask_inverse = False \n",
+        "    hybrid_generate_inputframes = False\n",
+        "    hybrid_use_first_frame_as_init_image = True\n",
+        "    hybrid_motion = \"None\"\n",
+        "    hybrid_motion_use_prev_img = False\n",
+        "    hybrid_flow_method = \"DIS Medium\"\n",
+        "    hybrid_composite = False\n",
+        "    hybrid_comp_mask_type = \"None\"\n",
+        "    hybrid_comp_mask_inverse = False\n",
         "    hybrid_comp_mask_equalize = \"None\"\n",
-        "    hybrid_comp_mask_auto_contrast = False \n",
-        "    hybrid_comp_save_extra_frames = False \n",
+        "    hybrid_comp_mask_auto_contrast = False\n",
+        "    hybrid_comp_save_extra_frames = False\n",
         "    hybrid_use_video_as_mse_image = False\n",
         "\n",
         "    ##@markdown ####**Interpolation:**\n",
-        "    interpolate_key_frames = False \n",
-        "    interpolate_x_frames = 4 \n",
-        "    \n",
+        "    interpolate_key_frames = False\n",
+        "    interpolate_x_frames = 4\n",
+        "\n",
         "    ##@markdown ####**Resume Animation:**\n",
         "    resume_from_timestring = False\n",
-        "    resume_timestring = \"20220829210106\" \n",
+        "    resume_timestring = \"20220829210106\"\n",
         "\n",
         "    return locals()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "id": "i9fly1RIWM_u"
       },
@@ -322,8 +317,8 @@
       "outputs": [],
       "source": [
         "##@markdown **Load Settings**\n",
-        "override_settings_with_file = False \n",
-        "settings_file = \"custom\" \n",
+        "override_settings_with_file = False\n",
+        "settings_file = \"custom\"\n",
         "custom_settings_file = \"/content/drive/MyDrive/Settings.txt\"\n",
         "#@markdown **7. Run**\n",
         "def DeforumArgs():\n",
@@ -333,33 +328,33 @@
         "    W = int(W)\n",
         "    H = int(H)\n",
         "    W, H = map(lambda x: x - x % 64, (W, H))  # resize to integer multiple of 64\n",
-        "    bit_depth_output = 8 \n",
+        "    bit_depth_output = 8\n",
         "\n",
         "    #@markdown **Sampling Settings**\n",
         "    seed = -1 #@param\n",
         "    sampler = 'ddim' #@param [\"klms\",\"dpm2\",\"dpm2_ancestral\",\"heun\",\"euler\",\"euler_ancestral\",\"plms\", \"ddim\", \"dpm_fast\", \"dpm_adaptive\", \"dpmpp_2s_a\", \"dpmpp_2m\"]\n",
         "    steps = 30 #@param\n",
-        "    scale = 15 #@param\n",
+        "    scale = 6 #@param\n",
         "    ddim_eta = 0.0\n",
         "    dynamic_threshold = None\n",
-        "    static_threshold = None   \n",
+        "    static_threshold = None\n",
         "\n",
         "    ##@markdown **Save & Display Settings**\n",
-        "    save_samples = True \n",
-        "    save_settings = True \n",
-        "    display_samples = True \n",
-        "    save_sample_per_step = False \n",
-        "    show_sample_per_step = False \n",
+        "    save_samples = True\n",
+        "    save_settings = True\n",
+        "    display_samples = True\n",
+        "    save_sample_per_step = False\n",
+        "    show_sample_per_step = False\n",
         "\n",
         "    #@markdown **Batch Settings**\n",
-        "    n_batch = 1 #@param\n",
-        "    n_samples = 1 \n",
+        "    n_batch = 50 #@param\n",
+        "    n_samples = 1\n",
         "    batch_name = \"StableArt\" #@param {type:\"string\"}\n",
-        "    filename_format = \"{timestring}_{index}_{prompt}.png\" \n",
-        "    seed_behavior = \"iter\" \n",
-        "    seed_iter_N = 1 \n",
-        "    make_grid = False \n",
-        "    grid_rows = 2  \n",
+        "    filename_format = \"{timestring}_{index}_{prompt}.png\"\n",
+        "    seed_behavior = \"iter\"\n",
+        "    seed_iter_N = 1\n",
+        "    make_grid = False\n",
+        "    grid_rows = 2\n",
         "    outdir = get_output_folder(root.output_path, batch_name)\n",
         "\n",
         "    #@markdown **Initial Image Settings**\n",
@@ -367,58 +362,58 @@
         "    strength = 0.65 #@param {type:\"number\"}\n",
         "    strength_0_no_init = True # Set the strength to 0 automatically when no init image is used\n",
         "    init_image = \"https://cdn.pixabay.com/photo/2022/07/30/13/10/green-longhorn-beetle-7353749_1280.jpg\" #@param {type:\"string\"}\n",
-        "    add_init_noise = False \n",
-        "    init_noise = 0.01 \n",
+        "    add_init_noise = False\n",
+        "    init_noise = 0.01\n",
         "    # Whiter areas of the mask are areas that change more\n",
         "    use_mask = False\n",
         "    use_alpha_as_mask = False # use the alpha channel of the init image as the mask\n",
-        "    mask_file = \"https://www.filterforge.com/wiki/images/archive/b/b7/20080927223728%21Polygonal_gradient_thumb.jpg\" \n",
-        "    invert_mask = False \n",
+        "    mask_file = \"https://www.filterforge.com/wiki/images/archive/b/b7/20080927223728%21Polygonal_gradient_thumb.jpg\"\n",
+        "    invert_mask = False\n",
         "    # Adjust mask image, 1.0 is no adjustment. Should be positive numbers.\n",
-        "    mask_brightness_adjust = 1.0  \n",
-        "    mask_contrast_adjust = 1.0  \n",
+        "    mask_brightness_adjust = 1.0\n",
+        "    mask_contrast_adjust = 1.0\n",
         "    # Overlay the masked image at the end of the generation so it does not get degraded by encoding and decoding\n",
-        "    overlay_mask = True  \n",
+        "    overlay_mask = True\n",
         "    # Blur edges of final overlay mask, if used. Minimum = 0 (no blur)\n",
-        "    mask_overlay_blur = 5 \n",
+        "    mask_overlay_blur = 5\n",
         "\n",
         "    ##@markdown **Exposure/Contrast Conditional Settings**\n",
-        "    mean_scale = 0 \n",
-        "    var_scale = 0 \n",
-        "    exposure_scale = 0 \n",
-        "    exposure_target = 0.5 \n",
+        "    mean_scale = 0\n",
+        "    var_scale = 0\n",
+        "    exposure_scale = 0\n",
+        "    exposure_target = 0.5\n",
         "\n",
         "    ##@markdown **Color Match Conditional Settings**\n",
-        "    colormatch_scale = 0 \n",
+        "    colormatch_scale = 0\n",
         "    colormatch_image = \"https://www.saasdesign.io/wp-content/uploads/2021/02/palette-3-min-980x588.png\"\n",
-        "    colormatch_n_colors = 4 \n",
-        "    ignore_sat_weight = 0 \n",
+        "    colormatch_n_colors = 4\n",
+        "    ignore_sat_weight = 0\n",
         "\n",
         "    ##@markdown **CLIP\\Aesthetics Conditional Settings**\n",
-        "    clip_name = 'ViT-L/14' \n",
-        "    clip_scale = 0 \n",
-        "    aesthetics_scale = 0 \n",
-        "    cutn = 1 \n",
+        "    clip_name = 'ViT-L/14'\n",
+        "    clip_scale = 0\n",
+        "    aesthetics_scale = 0\n",
+        "    cutn = 1\n",
         "    cut_pow = 0.0001\n",
         "\n",
         "    ##@markdown **Other Conditional Settings**\n",
-        "    init_mse_scale = 0 \n",
-        "    init_mse_image = \"https://cdn.pixabay.com/photo/2022/07/30/13/10/green-longhorn-beetle-7353749_1280.jpg\" \n",
-        "    blue_scale = 0 \n",
-        "    \n",
+        "    init_mse_scale = 0\n",
+        "    init_mse_image = \"https://cdn.pixabay.com/photo/2022/07/30/13/10/green-longhorn-beetle-7353749_1280.jpg\"\n",
+        "    blue_scale = 0\n",
+        "\n",
         "    ##@markdown **Conditional Gradient Settings**\n",
-        "    gradient_wrt = 'x0_pred' \n",
-        "    gradient_add_to = 'both' \n",
-        "    decode_method = 'linear' \n",
-        "    grad_threshold_type = 'dynamic' \n",
-        "    clamp_grad_threshold = 0.2 \n",
-        "    clamp_start = 0.2 \n",
-        "    clamp_stop = 0.01 \n",
-        "    grad_inject_timing = list(range(1,10)) \n",
+        "    gradient_wrt = 'x0_pred'\n",
+        "    gradient_add_to = 'both'\n",
+        "    decode_method = 'linear'\n",
+        "    grad_threshold_type = 'dynamic'\n",
+        "    clamp_grad_threshold = 0.2\n",
+        "    clamp_start = 0.2\n",
+        "    clamp_stop = 0.01\n",
+        "    grad_inject_timing = list(range(1,10))\n",
         "\n",
         "    ##@markdown **Speed vs VRAM Settings**\n",
-        "    cond_uncond_sync = True \n",
-        "    precision = 'autocast' \n",
+        "    cond_uncond_sync = True\n",
+        "    precision = 'autocast'\n",
         "    C = 4\n",
         "    f = 8\n",
         "\n",
