--- a/Tofu_Diffusion_SD.ipynb
+++ b/Tofu_Diffusion_SD.ipynb
@@ -16,7 +16,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "cellView": "form",
         "id": "IJjzzkKlWM_s",
@@ -119,7 +119,7 @@
         "from IPython.display import display, HTML, clear_output\n",
         "\n",
         "#@markdown **3. Civitai Model Setup**\\\n",
-        "#@markdown *copy the download link from civitai.com - only SD1.5 Models*\n",
+        "#@markdown *copy the download link adress from civitai.com - only SD1.5 Models*\n",
         "\n",
         "civitai_models_list = []\n",
         "civitai_model_url = \"\" #@param {type:\"string\"}\n",
@@ -190,7 +190,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "cellView": "form",
         "id": "E0tJVYA4WM_u"
@@ -199,7 +199,7 @@
       "source": [
         "def DeforumAnimArgs():\n",
         "\n",
-        "    #@markdown ####**5. Load additional settings**\n",
+        "    #@markdown ####**6. Load additional settings**\n",
         "    #@markdown *Don't forget to run this cell!*\n",
         "    animation_mode = 'None'\n",
         "    max_frames = 1000\n",
@@ -288,13 +288,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "i9fly1RIWM_u"
       },
       "outputs": [],
       "source": [
-        "## 6. Prompts ##\n",
+        "## 7. Prompts ##\n",
         "\n",
         "# positive prompts\n",
         "cond_prompts = {\n",
@@ -320,7 +320,7 @@
         "override_settings_with_file = False\n",
         "settings_file = \"custom\"\n",
         "custom_settings_file = \"/content/drive/MyDrive/Settings.txt\"\n",
-        "#@markdown **7. Run**\n",
+        "#@markdown **8. Run**\n",
         "def DeforumArgs():\n",
         "    #@markdown **Image Settings**\n",
         "    W = \"512\" #@param [512, 640, 768, 896, 1024]\n",
