--- a/Tofu_Diffusion_SD.ipynb
+++ b/Tofu_Diffusion_SD.ipynb
@@ -54,15 +54,12 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "vohUiWo-I2HQ",
-        "cellView": "form"
+        "id": "vohUiWo-I2HQ"
       },
       "outputs": [],
       "source": [
         "#@markdown **2. Environment Setup**\n",
         "import subprocess, time, gc, os, sys\n",
-        "\n",
-        "\n",
         "\n",
         "def setup_environment():\n",
         "    try:\n",
@@ -120,6 +117,11 @@
         "\n",
         "#@markdown **3. Civitai Model Setup**\\\n",
         "#@markdown *copy the download link adress from civitai.com - only SD1.5 Models*\n",
+        "\n",
+        "folder_path = '/content/civitai_models/'\n",
+        "\n",
+        "if not os.path.exists(folder_path):\n",
+        "    os.makedirs(folder_path)\n",
         "\n",
         "civitai_models_list = []\n",
         "civitai_model_url = \"\" #@param {type:\"string\"}\n",
