--- a/Tofu_Diffusion_SD.ipynb
+++ b/Tofu_Diffusion_SD.ipynb
@@ -54,7 +54,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "vohUiWo-I2HQ"
+        "id": "vohUiWo-I2HQ",
+        "cellView": "form"
       },
       "outputs": [],
       "source": [
