--- a/Tofu_Diffusion_SD.ipynb
+++ b/Tofu_Diffusion_SD.ipynb
@@ -8,7 +8,7 @@
       "source": [
         "# **Tofu Diffusion SD**\n",
         "\n",
-        "**Tofu Diffusion v1.0.0** is a fork of the [Deforum](https://github.com/deforum-art/deforum-stable-diffusion) notebook, made for single image generation. This notebook was customized by [Spingels](https://twitter.com/spingels_art)\n",
+        "**Tofu Diffusion v1.0.0** is a fork of the [Deforum](https://github.com/deforum-art/deforum-stable-diffusion) notebook, made for single image generation. This notebook was customized by tofu.diffusion@gmail.com\n",
         "\n",
         "\n",
         "[Stable Diffusion](https://github.com/CompVis/stable-diffusion) by Robin Rombach, Andreas Blattmann, Dominik Lorenz, Patrick Esser, Björn Ommer and the [Stability.ai](https://stability.ai/) Team. [K Diffusion](https://github.com/crowsonkb/k-diffusion) by [Katherine Crowson](https://twitter.com/RiversHaveWings)."
