--- a/Tofu_Diffusion_SD.ipynb
+++ b/Tofu_Diffusion_SD.ipynb
@@ -341,7 +341,7 @@
         "    n_batch = 50 #@param\n",
         "    n_samples = 1\n",
         "    batch_name = \"StableArt\" #@param {type:\"string\"}\n",
-        "    filename_format = \"{timestring}_{index}_{prompt}.png\"\n",
+        "    filename_format = \"{timestring}_{index}_{prompt}.png\" #@param [\"{timestring}_{index}_{seed}.png\",\"{timestring}_{index}_{prompt}.png\"]\n",
         "    seed_behavior = \"iter\"\n",
         "    seed_iter_N = 1\n",
         "    make_grid = False\n",
