--- a/Tofu_Diffusion_SD.ipynb
+++ b/Tofu_Diffusion_SD.ipynb
@@ -159,7 +159,7 @@
         "    map_location = \"cuda\"\n",
         "    #@markdown *In **model_config** if the model you are using is based on SD 1.4 or 1.5 choose (v1-inference.yaml)*\\\n",
         "    #@markdown *if it is based on SD 2.0 or 2.1 use (v2-interference-v.yaml)*\n",
-        "    model_config = \"v1-inference.yaml\" #@param [\"custom\",\"v2-inference.yaml\",\"v2-inference-v.yaml\",\"v1-inference.yaml\"]\n",
+        "    model_config = \"v1-inference.yaml\" #@param [\"v2-inference.yaml\",\"v2-inference-v.yaml\",\"v1-inference.yaml\"]\n",
         "    model_checkpoint =  \"custom\" #@param [\"custom\",\"v2-1_768-ema-pruned.ckpt\",\"v2-1_512-ema-pruned.ckpt\",\"768-v-ema.ckpt\",\"512-base-ema.ckpt\",\"Protogen_V2.2.ckpt\",\"v1-5-pruned.ckpt\",\"v1-5-pruned-emaonly.ckpt\",\"sd-v1-4-full-ema.ckpt\",\"sd-v1-4.ckpt\",\"sd-v1-3-full-ema.ckpt\",\"sd-v1-3.ckpt\",\"sd-v1-2-full-ema.ckpt\",\"sd-v1-2.ckpt\",\"sd-v1-1-full-ema.ckpt\",\"sd-v1-1.ckpt\", \"robo-diffusion-v1.ckpt\",\"wd-v1-3-float16.ckpt\"]\n",
         "    custom_config_path = \"\"\n",
         "    custom_checkpoint_path = \"\" #@param {type:\"string\"}\n",
@@ -316,8 +316,8 @@
         "#@markdown **8. Run**\n",
         "def DeforumArgs():\n",
         "    #@markdown **Image Settings**\n",
-        "    W = \"512\" #@param [512, 640, 768, 896, 1024]\n",
-        "    H = 768 #@param [512, 640, 768, 896, 1024]\n",
+        "    W = \"512\" #@param [512, 640, 768, 896, 1024, 1280]\n",
+        "    H = 768 #@param [512, 640, 768, 896, 1024, 1280]\n",
         "    W = int(W)\n",
         "    H = int(H)\n",
         "    W, H = map(lambda x: x - x % 64, (W, H))  # resize to integer multiple of 64\n",
@@ -342,7 +342,7 @@
         "    #@markdown **Batch Settings**\n",
         "    n_batch = 10 #@param\n",
         "    n_samples = 1\n",
-        "    batch_name = \"Tofu_Diffusion_art\" #@param {type:\"string\"}\n",
+        "    batch_name = \"TofuDiffusionArt\" #@param {type:\"string\"}\n",
         "    filename_format = \"{timestring}_{index}_{prompt}.png\" #@param [\"{timestring}_{index}_{seed}.png\",\"{timestring}_{index}_{prompt}.png\"]\n",
         "    seed_behavior = \"iter\"\n",
         "    seed_iter_N = 1\n",
