--- a/Tofu_Diffusion_SD.ipynb
+++ b/Tofu_Diffusion_SD.ipynb
@@ -47,7 +47,7 @@
       },
       "outputs": [],
       "source": [
-        "#@markdown **2. Environment Setup**\n",
+        "#@markdown **Environment Setup**\n",
         "import subprocess, time, gc, os, sys\n",
         "\n",
         "def setup_environment():\n",
@@ -59,7 +59,7 @@
         "    if 'google.colab' in str(ipy):\n",
         "        start_time = time.time()\n",
         "        packages = [\n",
-        "            'triton xformers==0.0.20',\n",
+        "            'https://download.pytorch.org/whl/cu118/xformers-0.0.22.post4%2Bcu118-cp310-cp310-manylinux2014_x86_64.whl',\n",
         "            'einops==0.4.1 pytorch-lightning==1.7.7 torchdiffeq==0.2.3 torchsde==0.2.5',\n",
         "            'ftfy timm transformers open-clip-torch omegaconf torchmetrics==0.11.4',\n",
         "            'safetensors kornia accelerate jsonmerge matplotlib resize-right',\n",
