--- a/Tofu_Diffusion_SD.ipynb
+++ b/Tofu_Diffusion_SD.ipynb
@@ -47,7 +47,7 @@
       },
       "outputs": [],
       "source": [
-        "#@markdown **Environment Setup**\n",
+        "#@markdown **2. Environment Setup**\n",
         "import subprocess, time, gc, os, sys\n",
         "\n",
         "def setup_environment():\n",
@@ -93,9 +93,7 @@
         "from helpers.render import render_animation, render_input_video, render_image_batch, render_interpolation\n",
         "from helpers.model_load import make_linear_decode, load_model, get_model_output_paths\n",
         "from helpers.aesthetics import load_aesthetics_model\n",
-        "from helpers.prompts import Prompts\n",
-        "\n",
-        "!mkdir -p /content/civitai_models/"
+        "from helpers.prompts import Prompts"
       ]
     },
     {
@@ -107,6 +105,7 @@
         "#@markdown **3. Civitai Model Setup**\\\n",
         "#@markdown *copy the download link adress from civitai.com - works with versions SD 1.4 - 1.5 - 2.0 - 2.1*\n",
         "\n",
+        "!mkdir -p /content/civitai_models/\n",
         "folder_path = '/content/civitai_models/'\n",
         "\n",
         "if not os.path.exists(folder_path):\n",
