--- a/Tofu_Diffusion_SD.ipynb
+++ b/Tofu_Diffusion_SD.ipynb
@@ -315,8 +315,8 @@
         "#@markdown **8. Run**\n",
         "def DeforumArgs():\n",
         "    #@markdown **Image Settings**\n",
-        "    W = \"512\" #@param [512, 640, 768, 896, 1024, 1280]\n",
-        "    H = 768 #@param [512, 640, 768, 896, 1024, 1280]\n",
+        "    Width = \"512\" #@param [512, 640, 768, 896, 1024, 1280]\n",
+        "    Height = 768 #@param [512, 640, 768, 896, 1024, 1280]\n",
         "    W = int(W)\n",
         "    H = int(H)\n",
         "    W, H = map(lambda x: x - x % 64, (W, H))  # resize to integer multiple of 64\n",
@@ -324,7 +324,7 @@
         "\n",
         "    #@markdown **Sampling Settings**\n",
         "    seed = -1 #@param\n",
-        "    sampler = 'ddim' #@param [\"klms\",\"dpm2\",\"dpm2_ancestral\",\"heun\",\"euler\",\"euler_ancestral\",\"plms\", \"ddim\", \"dpm_fast\", \"dpm_adaptive\", \"dpmpp_2s_a\", \"dpmpp_2m\"]\n",
+        "    sampler = 'dpmpp_2s_a' #@param [\"klms\",\"dpm2\",\"dpm2_ancestral\",\"heun\",\"euler\",\"euler_ancestral\",\"plms\", \"ddim\", \"dpm_fast\", \"dpm_adaptive\", \"dpmpp_2s_a\", \"dpmpp_2m\"]\n",
         "    steps = 30 #@param\n",
         "    scale = 6 #@param\n",
         "    ddim_eta = 0.0\n",
@@ -339,9 +339,9 @@
         "    show_sample_per_step = False\n",
         "\n",
         "    #@markdown **Batch Settings**\n",
-        "    n_batch = 10 #@param\n",
+        "    number_of_images = 10 #@param\n",
         "    n_samples = 1\n",
-        "    batch_name = \"TofuDiffusionArt\" #@param {type:\"string\"}\n",
+        "    folder_name = \"TofuDiffusionArt\" #@param {type:\"string\"}\n",
         "    filename_format = \"{timestring}_{index}_{prompt}.png\" #@param [\"{timestring}_{index}_{seed}.png\",\"{timestring}_{index}_{prompt}.png\"]\n",
         "    seed_behavior = \"iter\"\n",
         "    seed_iter_N = 1\n",
