--- a/Tofu_Diffusion_SD.ipynb
+++ b/Tofu_Diffusion_SD.ipynb
@@ -315,10 +315,10 @@
         "#@markdown **8. Run**\n",
         "def DeforumArgs():\n",
         "    #@markdown **Image Settings**\n",
-        "    Width = \"512\" #@param [512, 640, 768, 896, 1024, 1280]\n",
-        "    Height = 768 #@param [512, 640, 768, 896, 1024, 1280]\n",
-        "    W = int(W)\n",
-        "    H = int(H)\n",
+        "    width = \"512\" #@param [512, 640, 768, 896, 1024, 1280]\n",
+        "    height = 768 #@param [512, 640, 768, 896, 1024, 1280]\n",
+        "    W = int(width)\n",
+        "    H = int(height)\n",
         "    W, H = map(lambda x: x - x % 64, (W, H))  # resize to integer multiple of 64\n",
         "    bit_depth_output = 8\n",
         "\n",
@@ -339,9 +339,9 @@
         "    show_sample_per_step = False\n",
         "\n",
         "    #@markdown **Batch Settings**\n",
-        "    number_of_images = 10 #@param\n",
+        "    n_batch = 10 #@param\n",
         "    n_samples = 1\n",
-        "    folder_name = \"TofuDiffusionArt\" #@param {type:\"string\"}\n",
+        "    batch_name = \"TofuDiffusionArt\" #@param {type:\"string\"}\n",
         "    filename_format = \"{timestring}_{index}_{prompt}.png\" #@param [\"{timestring}_{index}_{seed}.png\",\"{timestring}_{index}_{prompt}.png\"]\n",
         "    seed_behavior = \"iter\"\n",
         "    seed_iter_N = 1\n",
