--- a/Tofu_Diffusion_SD.ipynb
+++ b/Tofu_Diffusion_SD.ipynb
@@ -16,12 +16,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "cellView": "form",
-        "id": "IJjzzkKlWM_s"
+        "id": "IJjzzkKlWM_s",
+        "outputId": "f0e9ea0f-f8c6-4cfb-9bd6-a7b7b2fe7650",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Tesla T4, 15360 MiB, 15101 MiB\n"
+          ]
+        }
+      ],
       "source": [
         "#@markdown **1. NVIDIA GPU**\n",
         "import subprocess, os, sys\n",
@@ -59,7 +71,7 @@
         "    if 'google.colab' in str(ipy):\n",
         "        start_time = time.time()\n",
         "        packages = [\n",
-        "            'https://download.pytorch.org/whl/cu118/xformers-0.0.22.post4%2Bcu118-cp310-cp310-manylinux2014_x86_64.whl',\n",
+        "            'xformers',\n",
         "            'einops==0.4.1 pytorch-lightning==1.7.7 torchdiffeq==0.2.3 torchsde==0.2.5',\n",
         "            'ftfy timm transformers open-clip-torch omegaconf torchmetrics==0.11.4',\n",
         "            'safetensors kornia accelerate jsonmerge matplotlib resize-right',\n",
@@ -112,7 +124,7 @@
         "    os.makedirs(folder_path)\n",
         "\n",
         "civitai_models_list = []\n",
-        "civitai_model_url = \"\" #@param {type:\"string\"}\n",
+        "civitai_model_url = \"https://civitai.com/api/download/models/128713?type=Model&format=SafeTensor&size=pruned&fp=fp16\" #@param {type:\"string\"}\n",
         "\n",
         "output = \"\"\n",
         "\n",
