--- a/Tofu_Diffusion_SD.ipynb
+++ b/Tofu_Diffusion_SD.ipynb
@@ -19,9 +19,21 @@
       "execution_count": null,
       "metadata": {
         "cellView": "form",
-        "id": "IJjzzkKlWM_s"
+        "id": "IJjzzkKlWM_s",
+        "outputId": "f0e9ea0f-f8c6-4cfb-9bd6-a7b7b2fe7650",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Tesla T4, 15360 MiB, 15101 MiB\n"
+          ]
+        }
+      ],
       "source": [
         "#@markdown **1. NVIDIA GPU**\n",
         "import subprocess, os, sys\n",
@@ -47,7 +59,7 @@
       },
       "outputs": [],
       "source": [
-        "#@markdown **2. Environment Setup**\n",
+        "#@markdown **Environment Setup**\n",
         "import subprocess, time, gc, os, sys\n",
         "\n",
         "def setup_environment():\n",
@@ -59,7 +71,7 @@
         "    if 'google.colab' in str(ipy):\n",
         "        start_time = time.time()\n",
         "        packages = [\n",
-        "            'https://download.pytorch.org/whl/cu118/xformers-0.0.22.post4%2Bcu118-cp310-cp310-manylinux2014_x86_64.whl',\n",
+        "            'xformers==0.0.23.post1',\n",
         "            'einops==0.4.1 pytorch-lightning==1.7.7 torchdiffeq==0.2.3 torchsde==0.2.5',\n",
         "            'ftfy timm transformers open-clip-torch omegaconf torchmetrics==0.11.4',\n",
         "            'safetensors kornia accelerate jsonmerge matplotlib resize-right',\n",
@@ -99,34 +111,37 @@
     {
       "cell_type": "code",
       "source": [
-        "import os\n",
-        "from IPython.display import display, HTML, clear_output\n",
         "\n",
         "#@markdown **3. Civitai Model Setup**\\\n",
         "#@markdown *copy the download link adress from civitai.com - works with versions SD 1.4 - 1.5 - 2.0 - 2.1*\n",
+        "import os\n",
+        "from IPython.display import display, HTML, clear_output\n",
         "\n",
-        "!mkdir -p /content/civitai_models/\n",
-        "folder_path = '/content/civitai_models/'\n",
-        "\n",
-        "if not os.path.exists(folder_path):\n",
-        "    os.makedirs(folder_path)\n",
+        "# Create model folder\n",
+        "models_folder = '/content/civitai_models'\n",
+        "if not os.path.exists(models_folder):\n",
+        "    os.makedirs(models_folder)\n",
         "\n",
         "civitai_models_list = []\n",
-        "civitai_model_url = \"\" #@param {type:\"string\"}\n",
+        "civitai_model_url = \"https://civitai.com/api/download/models/238656\" #@param {type:\"string\"}\n",
         "\n",
         "output = \"\"\n",
         "\n",
         "if not civitai_model_url:\n",
-        "    display(HTML('<font color=\"red\">Link missing</font>'))\n",
-        "else:\n",
-        "    output = !cd /content/civitai_models/ && mkdir -p tmp && cd tmp && curl -LOJ {civitai_model_url} && mv * ../ && echo \"Download successful\" || echo \"Download failed, maybe the link is wrong?\"\n",
-        "    print(f'{output[-1]}\\n')\n",
+        "    display(HTML('Link missing'))\n",
         "\n",
-        "directory = \"/content/civitai_models\"\n",
-        "files_in_directory = os.listdir(directory)\n",
-        "civitai_models_list = [file for file in files_in_directory if file.endswith(\".ckpt\") or file.endswith(\".safetensors\")]\n",
-        "for file in civitai_models_list:\n",
-        "    print(f'{file}: {directory}/{file}')"
+        "else:\n",
+        "    # Download model\n",
+        "    download_dir = os.path.join(models_folder, \"tmp\")\n",
+        "    os.makedirs(download_dir, exist_ok=True)\n",
+        "    output = !cd {download_dir} && curl -LOJ {civitai_model_url} && mv * ../ && echo \"Download successful\" || echo \"Download failed, maybe the link is wrong?\"\n",
+        "\n",
+        "print(f\"{output[-1]}\")\n",
+        "\n",
+        "# List downloaded models\n",
+        "for file in os.listdir(models_folder):\n",
+        "    if file.endswith(\".ckpt\") or file.endswith(\".safetensors\"):\n",
+        "        print(f\"{file}: {os.path.join(models_folder, file)}\")"
       ],
       "metadata": {
         "id": "3iI5GG7P8rQE",
